Add uncompressed WebGL build files for GitHub Pages and update index.html references

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Prototype 1 webgl.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Prototype 1 webgl.data.br",
-        frameworkUrl: buildUrl + "/Prototype 1 webgl.framework.js.br",
-        codeUrl: buildUrl + "/Prototype 1 webgl.wasm.br",
+  dataUrl: buildUrl + "/Prototype 1 webgl.data",
+  frameworkUrl: buildUrl + "/Prototype 1 webgl.framework.js",
+  codeUrl: buildUrl + "/Prototype 1 webgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Prototype 1",
